<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <!-- TOOLBAR -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/add_kitchen_item_toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/toolbar_height"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_item_heading"
            android:textColor="@color/text"
            android:textSize="@dimen/text_large" />

    </androidx.appcompat.widget.Toolbar>

    <!-- NAME -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/kitchen_item_name_input_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_kitchen_item_toolbar"
        android:layout_margin="@dimen/big_padding"
        android:hint="@string/name_in"
        app:errorEnabled="true"
        app:helperTextEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_kitchen_item_toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/kitchen_item_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textInverse" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- QUANTITY -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/kitchen_item_quantity_input_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:hint="@string/quantity_in"
        app:errorEnabled="true"
        app:helperTextEnabled="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@id/kitchen_units_dropdown_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kitchen_item_name_input_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/kitchen_item_quantity_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textColor="@color/textInverse" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- UNIT -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/kitchen_units_dropdown_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kitchen_item_name_input_parent">

        <AutoCompleteTextView
            android:id="@+id/kitchen_units_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/unit_in"
            android:inputType="none"
            android:maxLines="1"
            android:textColor="@color/textInverse" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- EXPIRY DATE -->
    <TextView
        android:id="@+id/expiry_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:text="@string/expiry_date"
        android:textColor="@color/textInverse"
        android:textSize="@dimen/text_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kitchen_item_quantity_input_parent" />

    <Button
        android:id="@+id/expiry_input_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_padding"
        android:layout_marginEnd="@dimen/big_padding"
        android:drawableEnd="@drawable/calendar_icon"
        android:text="@string/no_exp_date_label"
        android:textSize="@dimen/text_tiny"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@id/expiry_heading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/kitchen_item_quantity_input_parent"
        app:layout_constraintTop_toTopOf="@id/expiry_heading" />

    <!-- LOCATION -->
    <TextView
        android:id="@+id/location_options_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:text="@string/location_heading"
        android:textColor="@color/textInverse"
        android:textSize="@dimen/text_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expiry_input_button">

    </TextView>

    <RadioGroup
        android:id="@+id/location_options_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:textColor="@color/textInverse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_options_heading">

        <RadioButton
            android:id="@+id/location_option_fridge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"
            android:text="@string/loc_fridge"
            android:textSize="@dimen/text_small" />

        <RadioButton
            android:id="@+id/location_option_pantry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"
            android:text="@string/loc_pantry"
            android:textSize="@dimen/text_small" />

        <RadioButton
            android:id="@+id/location_option_freezer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"
            android:text="@string/loc_freezer"
            android:textSize="@dimen/text_small" />

        <RadioButton
            android:id="@+id/location_option_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"
            android:text="@string/loc_other"
            android:textSize="@dimen/text_small" />
    </RadioGroup>

    <!-- TYPE -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/kitchen_type_dropdown_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/kitchen_item_quantity_input_parent"
        app:layout_constraintTop_toBottomOf="@id/expiry_input_button">

        <AutoCompleteTextView
            android:id="@+id/kitchen_type_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/type_in"
            android:inputType="none"
            android:maxLines="1"
            android:textColor="@color/textInverse" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- SAVE -->
    <Button
        android:id="@+id/kitchen_form_save"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/big_padding"
        android:layout_marginTop="@dimen/big_padding"
        android:layout_marginBottom="@dimen/bottom_nav_height_with_big_margin"
        android:text="@string/button_save"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>