<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- TOOLBAR -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_heading"
            android:textColor="@color/text"
            android:textSize="@dimen/text_large" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- NOTIFICATION SETTINGS -->
            <TextView
                android:id="@+id/notifications_options_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/big_padding"
                android:text="@string/notifications"
                android:textColor="@color/textInverse"
                android:textSize="@dimen/text_large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/one_day_notif_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="36dp"
                android:layout_marginVertical="@dimen/big_padding"
                android:text="@string/one_day_warn"
                android:textSize="@dimen/text_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notifications_options_heading" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/two_day_notif_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="36dp"
                android:layout_marginVertical="@dimen/big_padding"
                android:text="@string/two_day_warn"
                android:textSize="@dimen/text_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/one_day_notif_switch" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/one_week_notif_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="36dp"
                android:layout_marginVertical="@dimen/big_padding"
                android:text="@string/one_week_warn"
                android:textSize="@dimen/text_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/two_day_notif_switch" />

            <TextView
                android:id="@+id/notification_time_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/big_padding"
                android:text="@string/notification_time"
                android:textColor="@color/textInverse"
                android:textSize="@dimen/text_small"
                app:layout_constraintBottom_toBottomOf="@id/time_set_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/time_set_button" />

            <Button
                android:id="@+id/time_set_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_padding"
                android:layout_marginBottom="@dimen/big_padding"
                android:drawableEnd="@drawable/add_clock_icon"
                android:text="@string/no_notif_time_label"
                android:textSize="@dimen/text_tiny"
                app:layout_constraintEnd_toStartOf="@id/time_set_help_button"
                app:layout_constraintStart_toEndOf="@id/notification_time_heading"
                app:layout_constraintTop_toBottomOf="@+id/one_week_notif_switch" />

            <ImageButton
                android:id="@+id/time_set_help_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/big_padding"
                android:layout_marginEnd="@dimen/big_padding"
                android:background="@color/background"
                android:contentDescription="@string/help_icon"
                android:padding="@dimen/tiny_padding"
                android:src="@drawable/query_help_icon"
                android:tint="@color/textSecondary"
                app:layout_constraintBottom_toBottomOf="@id/time_set_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/time_set_button"
                app:layout_constraintTop_toTopOf="@id/time_set_button" />

            <TextView
                android:id="@+id/notification_disclaimer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/big_padding"
                android:text="@string/notification_disclaimer"
                android:textColor="@color/divider"
                android:textSize="@dimen/text_tiny"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notification_time_heading" />

            <View
                android:id="@+id/div_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="@dimen/big_padding"
                android:background="@color/divider"
                app:layout_constraintTop_toBottomOf="@+id/notification_disclaimer" />

            <!-- UNIT SETTINGS -->
            <TextView
                android:id="@+id/unit_options_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/big_padding"
                android:text="@string/units"
                android:textColor="@color/textInverse"
                android:textSize="@dimen/text_huge"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/div_1" />

            <RadioGroup
                android:id="@+id/unit_options_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/big_padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/unit_options_heading"
                app:layout_constraintWidth_default="percent">

                <RadioButton
                    android:id="@+id/unit_option_metric"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/small_padding"
                    android:text="@string/metric"
                    android:textSize="@dimen/text_small" />

                <RadioButton
                    android:id="@+id/unit_option_imperial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/small_padding"
                    android:text="@string/imperial"
                    android:textSize="@dimen/text_small" />

            </RadioGroup>

            <View
                android:id="@+id/div_3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="@dimen/big_padding"
                android:background="@color/divider"
                app:layout_constraintTop_toBottomOf="@+id/unit_options_group" />

            <!-- INFO SECTION -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/big_padding"
                android:text="@string/info"
                android:textColor="@color/divider"
                android:textSize="@dimen/text_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/div_3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>