<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/kitchen_list_cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- TOOLBAR -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/kitchen_list_toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/kitchen_list_toolbar_menu">

        <TextView
            android:id="@+id/kitchen_list_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kitchen_list_heading"
            android:textColor="@color/text"
            android:textSize="@dimen/text_large" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/kitchen_list_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_horizontal"
            android:iconifiedByDefault="true"
            app:queryHint="@string/search_title" />

    </androidx.appcompat.widget.Toolbar>

    <!-- RECYCLER VIEW -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/kitchen_list_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="@dimen/toolbar_height"
        android:layout_marginBottom="@dimen/recycler_view_bottom_margin"
        tools:listitem="@layout/kitchen_list_recyclerview_item" />

    <!-- BACKGROUND EMPTY LIST DISPLAY -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/no_kitchen_items_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/no_kitchen_items_icon"
            android:layout_width="@dimen/bottom_nav_height_with_big_margin"
            android:layout_height="@dimen/bottom_nav_height_with_big_margin"
            android:contentDescription="@string/empty_kitchen_list_icon"
            android:src="@drawable/no_food_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_padding"
            android:text="@string/empty_kitchen"
            android:textSize="@dimen/text_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/no_kitchen_items_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- FAB(S) -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/kitchen_list_fab_text"
        android:layout_width="@dimen/fab_diameter"
        android:layout_height="@dimen/fab_diameter"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/big_padding"
        android:layout_marginBottom="@dimen/bottom_nav_height_with_big_margin"
        android:contentDescription="@string/add_to_kitchen_list_manual"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
        app:srcCompat="@drawable/text_icon" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/kitchen_list_fab_camera"
        android:layout_width="@dimen/fab_diameter"
        android:layout_height="@dimen/fab_diameter"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/big_padding"
        android:layout_marginBottom="@dimen/bottom_nav_height_with_big_margin"
        android:contentDescription="@string/add_to_kitchen_list_obj_detect"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
        app:srcCompat="@drawable/camera_icon" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/kitchen_list_fab_barcode"
        android:layout_width="@dimen/fab_diameter"
        android:layout_height="@dimen/fab_diameter"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/big_padding"
        android:layout_marginBottom="@dimen/bottom_nav_height_with_big_margin"
        android:contentDescription="@string/add_to_kitchen_list_barcode"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
        app:srcCompat="@drawable/qrcode_icon" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/kitchen_list_fab_main"
        android:layout_width="@dimen/fab_diameter"
        android:layout_height="@dimen/fab_diameter"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/big_padding"
        android:layout_marginBottom="@dimen/bottom_nav_height_with_big_margin"
        android:contentDescription="@string/add_to_kitchen_list"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
        app:srcCompat="@drawable/add_icon" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>