<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- TOOLBAR -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/shopping_filters_toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/toolbar_height"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_title"
            android:textColor="@color/text"
            android:textSize="@dimen/text_large" />

    </androidx.appcompat.widget.Toolbar>

    <!-- TYPE -->
    <TextView
        android:id="@+id/shopping_filters_type_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:text="@string/type_in"
        android:textColor="@color/textInverse"
        android:textSize="@dimen/text_huge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shopping_filters_toolbar" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/shopping_filters_type"
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/big_padding"
        app:chipSpacing="@dimen/small_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shopping_filters_type_heading">

    </com.google.android.material.chip.ChipGroup>

    <!-- APPLY -->
    <Button
        android:id="@+id/shopping_filters_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/big_padding"
        android:layout_marginTop="@dimen/big_padding"
        android:layout_marginBottom="@dimen/bottom_nav_height_with_big_margin"
        android:text="@string/button_apply"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>